# ieee_uav_2022

./: .gitignore  .gitmodules  README.md  trial_1.world
DQ_predict/bezier_test/: CMakeLists.txt  package.xml
DQ_predict/bezier_test/include/bezier_test/: predict.h
DQ_predict/bezier_test/src/: bezier_predict.cpp  predict.cpp  predict_test.cpp
OOQP/doc-src/: doxygen_errors
OOQP/doc-src/ooqp-userguide/: ooqp-userguide.blg
OOQP/src/Readers/: hash.C
YOLO/: CMakeLists.txt
YOLO/msg/: bbox.msg
YOLO/scripts/: obj.names  ros_opencv_dnn.py  yolov4-tiny-3l-uav.cfg
drone_models/d435i_ieee/: model.config  model.sdf
drone_models/iris_ieee/: iris_ieee.sdf  model.config
ieee_uav/: CMakeLists.txt  package.xml  rviz.rviz
ieee_uav/include/: main.h  utility.h
ieee_uav/launch/: gazebo.launch  main.launch  trial1.launch  trial2.launch
ieee_uav/msg/: odom_array.msg
ieee_uav/node/: main.cpp  predict_test.cpp
ieee_uav/node/include/: bezier_predict.h  ieee_unav.h  predict.h  utility.hpp
ieee_uav/node/src/: ieee_unav.cpp  ieee_unav_callbacks.cpp  predict.cpp  predict_test.cpp.backup
ieee_uav/scripts/: mpc-gt-fly.py  mpc-slsqp.py  mpc-slsqp.py.back  tf_broadcaster.py  visualizer.py
ieee_uav/src/: main.cpp
ieee_uav/target_traj/include/: bezier_predict.h  predict.h
ieee_uav/target_traj/src/: bezier_predict.cpp  predict.cpp
ma27-1.0.0/: Makefile  Makefile.in  config.status  configure
ma27-1.0.0/example/: Makefile  Makefile.in
ma27-1.0.0/src/: Makefile  Makefile.in
