<?xml version="1.0"?>
<package format="2">
  <name>ieee_uav</name>
  <version>0.0.0</version>
  <description>The ieee_uav package</description>
  <maintainer email="eungchang_mason@kaist.ac.kr">mason</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>yolo_ros_simple</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>